@@ -6,6 +6,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Blacklist armel-specific symbols in dpkg-gensymbols. Reported by Riku
     Voipio. Closes: #457964
 
+  [ Guillem Jover ]
+  * Move compression related variables to a new Dpkg::Compression module.
+
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
 
